--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <body>
     <canvas id="canvas1"></canvas>
     
+    <img src="assets/images/player.png" alt="player" id="playerImage">
+    <img src="assets/images/background_single.png" alt="backgroundOfGame" id="backgroundImage">
+    <img src="assets/images/enemy_1.png" alt="enemyImage" id="enemy1">
     <script src="script.js"></script>
 </body>
 </html>
