setting up JS Fullscreen API

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <img src="assets/images/player.png" alt="player" id="playerImage">
     <img src="assets/images/background_single.png" alt="backgroundOfGame" id="backgroundImage">
     <img src="assets/images/enemy_1.png" alt="enemyImage" id="enemy1">
+    <button id="fullScreenButton">Toggle Fullscreen</button>
     <script src="script.js"></script>
 </body>
 </html>
